<resources>
    <string name="game_title">SANDS OF SERPENTS</string>
    <string name="play_game">Play Game</string>
    <string name="leaderboard1">Leaderboard</string>
    <string name="credits">CREDITS</string>
    <string name="tap_to_play">Tap to Play!</string>
    <string name="game_over_text">GAME OVER!</string>
    <string name="restart_text">Restart Game</string>
    <string name="home_text">Return to Home</string>
    <string name="score_text">SCORE: %1$d</string>
    <string name="game_paused_text">Tap to Play</string>
    <string name="back_leaderboard_text">BACK TO MAIN MENU</string>
    <string name="top_10_scores_text">TOP 10 SCORES</string>
    <string name="difficulty_text">GAME DIFFICULTY</string>
    <string name="dialog_text">SELECT DIFFICULTY BELOW</string>


</resources>