<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gamebackground"
        android:padding="16dp">

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_text"
        android:fontFamily="@font/game_title_font"
        android:textSize="60sp"
        android:textColor="@color/game_over_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_over_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/button_font"
        android:text="@string/score_text"
        android:textColor="#FFCC80"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/restart_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/button_font"
        android:minHeight="48dp"
        android:text="@string/restart_text"
        android:textColor="@color/restart_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restart_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/button_font"
        android:minHeight="48dp"
        android:text="@string/home_text"
        android:textColor="@color/home_text"
        android:textSize="30sp" />

    </RelativeLayout>
